--- a/base.html
+++ b/base.html
@@ -5,6 +5,12 @@
          body{
       background-image: url('paper.jpeg');
     }
+    a:hover{
+      opacity: 0;
+      transition-duration: 1.2s;
+    }
+
+    }
     </style>
   </head>
   <body>
